--- a/MyFrameWork/Packages/manifest.json
+++ b/MyFrameWork/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.tripolygon.umodeler-x": "file:com.tripolygon.umodeler-x-1.0.1-plus/com.tripolygon.umodeler-x-1.0.1-plus.tgz",
     "com.unity.addressables": "1.21.21",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.2d": "2.0.0",
